# rolefetch

./: .gitignore  README.md  pyproject.toml
career_scraper/: __init__.py  __main__.py  cli.py  export.py  models.py
career_scraper/sources/: __init__.py  apple.py  google.py
rolefetch/: cli.py
rolefetch/sources/: amazon.py  microsoft.py
tests/: test_amazon.py  test_apple_normalize.py  test_apple_pagination.py  test_cli.py  test_export.py  test_google.py  test_microsoft.py
tests/fixtures/: apple_search_page.json  google_results_sample.html
